change ifo to ispo

--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -24,7 +24,7 @@ body:
         - Syrup Pools
         - Lottery
         - Prediction
-        - IFO
+        - ISPO
         - Info
         - NFT
         - Other
